--- a/需求规格说明书.md
+++ b/需求规格说明书.md
@@ -6,30 +6,31 @@
 姓名路人甲（应客户要求化名）性别男职业在校大三在读目的，动机很喜欢图书馆的学习氛围，经常利用闲暇时间去图书馆自习困难因为大三课程太多，去图书馆的时间比较碎片化，到图书馆时有时发现没有座位了，白跑一趟典型场景上午一二节课下课去图书馆，结果没了位置用户定位本小程序核心功能提供座位的查看服务，会通过不同颜色标记已占座，未占座的座位，一目了然，直观清晰。
  
 姓名炮灰乙（应客户要求化名）性别男职业在校大三在读目的，动机很喜欢图书馆的学习氛围，经常利用闲暇时间去图书馆自习困难经常因为图书馆座位问题伤脑筋典型场景满心欢喜地去图书馆学习结果发现全满，蓝瘦香菇~用户定位本小程序核心功能提供座位的查看服务，会通过不同颜色标记已占座，未占座的座位，一目了然，直观清晰。
- 1.4图1.4.1状态图
+ ## 1.4图1.4.1状态图
 ![LP6_(6XAFC0TN {R~MGOA4](https://user-images.githubusercontent.com/82789039/115176858-84803a00-a100-11eb-95d8-ecd4fa07a7c4.JPG)![}YNT` LDR$99F9_5R@IFUT](https://user
- 1.4.2顺序图
+ ## 1.4.2顺序图
 ![}YNT` LDR$99F9_5R@IFUT](https://user-images.githubusercontent.com/82789039/115176882-906bfc00-a100-11eb-8e5f-deccbe09b396.JPG)
 
- 1.4.3类图
+ ## 1.4.3类图
 ![K@KIOL$RK1XSN@U(EY4X8PF](https://user-images.githubusercontent.com/82789039/115176887-92ce5600-a100-11eb-8067-02988be93dca.JPG)
 
- 1.4.4活动图
+ ## 1.4.4活动图
 ![9TU`(Y6NIWI5%0QLYPP3~_1](https://user-images.githubusercontent.com/82789039/115176897-9661dd00-a100-11eb-9603-8afb5fa99b10.JPG)
 
- 1.4.5用例图
+ ## 1.4.5用例图
 ![19DFHB)3U4$GLHFU{$(NT(8](https://user-images.githubusercontent.com/82789039/115176907-9a8dfa80-a100-11eb-8921-4dfdef10fcac.JPG)
 
- 1.4.6泳道图
+ ## 1.4.6泳道图
 ![}D)VIHI~H}I22AG7Y VVT6X](https://user-images.githubusercontent.com/82789039/115176913-9d88eb00-a100-11eb-839b-a3cb61ec6301.JPG)
 
- 1.5界面原型用户
+ ## 1.5界面原型用户
 ![CTCL1{$9DHRU1@CH0F1`SGE](https://user-images.githubusercontent.com/82789039/115176917-9f52ae80-a100-11eb-96f7-9e14c18d6c02.JPG)
 
  ![E(7)R8TG@50(D08L(@HM594](https://user-images.githubusercontent.com/82789039/115176925-a4176280-a100-11eb-9d10-fe52501d9e1c.JPG)
 
 
-就坐
+## 就坐
+
 ![V_E_B`FQHWPW KZE`O(WE7E](https://user-images.githubusercontent.com/82789039/115176932-a8438000-a100-11eb-9f1c-86d4787f97f4.JPG)
 ![ONMM`KX85HEO6BDVSZ40H_S](https://user-images.githubusercontent.com/82789039/115176938-ab3e7080-a100-11eb-8cb8-7f9b1bf2f879.JPG)
 ![8L7COHG3F3Y)XY@XZ9 U79K](https://user-images.githubusercontent.com/82789039/115176943-aed1f780-a100-11eb-8213-bd061a2a89b6.JPG)
@@ -40,13 +41,18 @@
 ![FX@1_AK%6Q7MU6M0Q3EN~}I](https://user-images.githubusercontent.com/82789039/115176955-b5f90580-a100-11eb-8d19-758b6943374b.JPG)
 ![GYXNV RWP(G)FIHUM(MEETW](https://user-images.githubusercontent.com/82789039/115176958-b72a3280-a100-11eb-8fae-833a363a9b22.JPG)
 
-   1.6功能描述1.6.1登陆注册注册：如果没有账号的话，可以通过手机号注册，注册完成后要与学号绑定，方便之后的打卡操作。登录：可以通过学号和密码登录，也可以通过手机号和验证码登录。1.6.2座位查看1.门口来一张二维码，进入得扫码（我假设门口有人站岗保证100%扫码）2.然后小程序会显示是这样的红色表示已经有人就座了绿色表示无人就座
+## 1.6功能描述
+### 1.6.1登陆注册注册：如果没有账号的话，可以通过手机号注册，注册完成后要与学号绑定，方便之后的打卡操作。登录：可以通过学号和密码登录，也可以通过手机号和验证码登录。
+### 1.6.2座位查看
+#### 1.门口来一张二维码，进入得扫码（我假设门口有人站岗保证100%扫码）
+#### 2.然后小程序会显示是这样的红色表示已经有人就座了绿色表示无人就座
 A1A2A3A4...B1B2B3B4......              
-3.然后桌子上贴着二维码，就座得扫码（第二次扫码）4.比如我在图书馆门口看了一下小程序，
+#### 3.然后桌子上贴着二维码，就座得扫码（第二次扫码）4.比如我在图书馆门口看了一下小程序，
 A1A2A3A4...B1B2B3B4......              
 我知道A3A4座位没有人，我就走到201扫个码进门，然后一看A3果然没人，我就扫A3桌子上的码，点就座按钮然后坐下。
 A1A2A3A4...B1B2B3B4......              
  过了一个小时，我要走了，这时候我扫码点退座，走了。
 A1A2A3A4...B1B2B3B4......              
- 是这样的在线显示座位的小程序（没有预约功能）（我们项目的独（过）特（关）之处在于我们做了座位差错检测机制，而同类的产品几乎没有）1.7验收验证标准
+ 是这样的在线显示座位的小程序（没有预约功能）（我们项目的独（过）特（关）之处在于我们做了座位差错检测机制，而同类的产品几乎没有）
+## 1.7验收验证标准
 测试功能测试项输入及操作校验点预测结果验收情况小程序     登陆界面本地功能输入账号账号为5-8字符对于超过或没达到的字符进行预测识别，并提示 输入密码框密码长度6-16位，可由数字、英文、下划线符任意组合对于非法文本可以进行与现实别，并提示    点击"注册"按钮注册功能点击快速注册按钮，可进入相应界面   点击"忘记密码"按钮 忘记密码功能点击忘记密码按钮，可进入相应的界面   登录功能点击"登录"按钮账号密码校验，并显示登陆结果信息对于上述非法文本，以及账号密码不匹配的情况，返回登录失败信息  座位查看进入座位详情页面即可查看点击可查看座位详情显示座位的颜色不同  退出座位查看点击按钮回到主界面  退出至主界面
