--- a/需求规格说明书.md
+++ b/需求规格说明书.md
@@ -42,7 +42,9 @@
 ![GYXNV RWP(G)FIHUM(MEETW](https://user-images.githubusercontent.com/82789039/115176958-b72a3280-a100-11eb-8fae-833a363a9b22.JPG)
 
 ## 1.6功能描述
-### 1.6.1登陆注册注册：如果没有账号的话，可以通过手机号注册，注册完成后要与学号绑定，方便之后的打卡操作。登录：可以通过学号和密码登录，也可以通过手机号和验证码登录。
+### 1.6.1登陆注册
+注册：如果没有账号的话，可以通过手机号注册，注册完成后要与学号绑定，方便之后的打卡操作。
+登录：可以通过学号和密码登录，也可以通过手机号和验证码登录。
 ### 1.6.2座位查看
 #### 1.门口来一张二维码，进入得扫码（我假设门口有人站岗保证100%扫码）
 #### 2.然后小程序会显示是这样的红色表示已经有人就座了绿色表示无人就座
