--- a/需求规格说明书.md
+++ b/需求规格说明书.md
@@ -1,8 +1,13 @@
 # 需求规格说明书
 “至诚微座”需求说明书所属学院：福州大学至诚学院团队名称：16lab指导老师：张栋 团队项目logo
+
 ![9H%LQO3@IA9V49BYK$ { D](https://user-images.githubusercontent.com/82789039/115176846-7df1c280-a100-11eb-916b-2e48b74d81f7.JPG)
 
- 1.1编写目的为准确描述小程序定位，明确小程序需求，减少开发工作以及便于小程序升级和产品转移撰写本文档。本篇需求规格说明书详细描述了"至诚微座"这一小程序功能的用户需求、小程序规格等内容。方便用户深入了解该小程序，同时也是开发者进行开发、测试以及项目验收的主要依据。1.2背景软件名称：至诚微座开发者：福州大学至诚学院2018级软件工程综合实践小组“16lab”本项目初期通过问卷了解了潜在用户需求，从用户的需求以及对于当前市场上产品不能解决的用户痛点出发，经过组内讨论从而确定了软件定位和主要功能。组内寻找其他相似软件并进行使用，不断提高本项目的实用性。本产品主要面向想要前往图书馆进行学习却不知道空余座位数量的学生，这是我们最重要的客户，能够更好的了解到图书馆座位的剩余情况。1.3用户场景
+## 1.1编写目的
+ 为准确描述小程序定位，明确小程序需求，减少开发工作以及便于小程序升级和产品转移撰写本文档。本篇需求规格说明书详细描述了"至诚微座"这一小程序功能的用户需求、小程序规格等内容。方便用户深入了解该小程序，同时也是开发者进行开发、测试以及项目验收的主要依据。
+## 1.2背景软件
+2.名称：至诚微座开发者：福州大学至诚学院2018级软件工程综合实践小组“16lab”本项目初期通过问卷了解了潜在用户需求，从用户的需求以及对于当前市场上产品不能解决的用户痛点出发，经过组内讨论从而确定了软件定位和主要功能。组内寻找其他相似软件并进行使用，不断提高本项目的实用性。本产品主要面向想要前往图书馆进行学习却不知道空余座位数量的学生，这是我们最重要的客户，能够更好的了解到图书馆座位的剩余情况。
+## 1.3用户场景
 姓名路人甲（应客户要求化名）性别男职业在校大三在读目的，动机很喜欢图书馆的学习氛围，经常利用闲暇时间去图书馆自习困难因为大三课程太多，去图书馆的时间比较碎片化，到图书馆时有时发现没有座位了，白跑一趟典型场景上午一二节课下课去图书馆，结果没了位置用户定位本小程序核心功能提供座位的查看服务，会通过不同颜色标记已占座，未占座的座位，一目了然，直观清晰。
  
 姓名炮灰乙（应客户要求化名）性别男职业在校大三在读目的，动机很喜欢图书馆的学习氛围，经常利用闲暇时间去图书馆自习困难经常因为图书馆座位问题伤脑筋典型场景满心欢喜地去图书馆学习结果发现全满，蓝瘦香菇~用户定位本小程序核心功能提供座位的查看服务，会通过不同颜色标记已占座，未占座的座位，一目了然，直观清晰。
