--- a/需求规格说明书.md
+++ b/需求规格说明书.md
@@ -51,14 +51,14 @@
 ![GYXNV RWP(G)FIHUM(MEETW](https://user-images.githubusercontent.com/82789039/115176958-b72a3280-a100-11eb-8fae-833a363a9b22.JPG)
 
 ## 1.6功能描述
-  ### 1.6.1登陆注册
+### 1.6.1登陆注册
 注册：如果没有账号的话，可以通过手机号注册，注册完成后要与学号绑定，方便之后的打卡操作。
 登录：可以通过学号和密码登录，也可以通过手机号和验证码登录。
-  ### 1.6.2座位查看
-   #### 1.门口来一张二维码，进入得扫码（我假设门口有人站岗保证100%扫码）
-   #### 2.然后小程序会显示是这样的红色表示已经有人就座了绿色表示无人就座
+### 1.6.2座位查看
+门口来一张二维码，进入得扫码（我假设门口有人站岗保证100%扫码）
+然后小程序会显示是这样的红色表示已经有人就座了绿色表示无人就座
 A1A2A3A4...B1B2B3B4......              
-   #### 3.然后桌子上贴着二维码，就座得扫码（第二次扫码）4.比如我在图书馆门口看了一下小程序，
+然后桌子上贴着二维码，就座得扫码（第二次扫码）4.比如我在图书馆门口看了一下小程序，
 A1A2A3A4...B1B2B3B4......              
 我知道A3A4座位没有人，我就走到201扫个码进门，然后一看A3果然没人，我就扫A3桌子上的码，点就座按钮然后坐下。
 A1A2A3A4...B1B2B3B4......              
