--- a/需求规格说明书.md
+++ b/需求规格说明书.md
@@ -7,7 +7,9 @@
  为准确描述小程序定位，明确小程序需求，减少开发工作以及便于小程序升级和产品转移撰写本文档。本篇需求规格说明书详细描述了"至诚微座"这一小程序功能的用户需求、小程序规格等内容。方便用户深入了解该小程序，同时也是开发者进行开发、测试以及项目验收的主要依据。
  
 ## 1.2背景软件
-名称：至诚微座开发者：福州大学至诚学院2018级软件工程综合实践小组“16lab”本项目初期通过问卷了解了潜在用户需求，从用户的需求以及对于当前市场上产品不能解决的用户痛点出发，经过组内讨论从而确定了软件定位和主要功能。
+名称：至诚微座
+开发者：福州大学至诚学院 2018级软件工程综合实践小组“16lab”
+本项目初期通过问卷了解了潜在用户需求，从用户的需求以及对于当前市场上产品不能解决的用户痛点出发，经过组内讨论从而确定了软件定位和主要功能。
 组内寻找其他相似软件并进行使用，不断提高本项目的实用性。本产品主要面向想要前往图书馆进行学习却不知道空余座位数量的学生，这是我们最重要的客户，能够更好的了解到图书馆座位的剩余情况。
 
 ## 1.3用户场景
