--- a/需求规格说明书.md
+++ b/需求规格说明书.md
@@ -62,7 +62,8 @@
 门口来一张二维码，进入得扫码（我假设门口有人站岗保证100%扫码）
 然后小程序会显示是这样的红色表示已经有人就座了绿色表示无人就座
 A1A2A3A4...B1B2B3B4......              
-然后桌子上贴着二维码，就座得扫码（第二次扫码）4.比如我在图书馆门口看了一下小程序，
+然后桌子上贴着二维码，就座得扫码（第二次扫码）
+比如我在图书馆门口看了一下小程序，
 A1A2A3A4...B1B2B3B4......              
 我知道A3A4座位没有人，我就走到201扫个码进门，然后一看A3果然没人，我就扫A3桌子上的码，点就座按钮然后坐下。
 A1A2A3A4...B1B2B3B4......              
